<resources>
    <string name="app_name">Time Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
        <string name="user">Name</string>
    <string name="mobile">Mobile No.</string>
    <string name="confirm">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="dob1">Date Of Birth(DD/MM/YYYY)</string>

    <string name="title_activity_register">Register</string>
</resources>
